--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  shared_preferences: ^2.3.2
+  get_it: ^8.0.0
 
 dev_dependencies:
   flutter_test:
