--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
       - assets/bd/bd3.png
       - assets/bd/bd2.jpg
       - assets/bd/bd.jpg
+      - assets/bd/bd4.png
 #     - images/a_dot_burr.jpeg
 #     - images/a_dot_ham.jpeg
 
