--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,11 +45,13 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: ^0.13.1
+  flutter_localizations:
+    sdk: flutter
 
 flutter_icons:
   android: true
@@ -71,6 +75,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
+flutter_intl:
+  enabled: true
+  main_locale: ru
 
   # To add assets to your application, add an assets section, like this:
   assets:
